# 3DBP_OpenAI

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
apps/: benchmark.cpp  generate.cpp  pack.cpp
benchmarks/corpus/: dense_layers.json  mixed_constraints.json  partial_pressure.json
cmake/: three_dbpConfig.cmake.in
docs/: Doxyfile
include/bp/: instance_io.hpp  model.hpp  packer.hpp  validation.hpp
include/bp/algorithms/: algorithms.hpp
src/: instance_io.cpp  model.cpp  packer.cpp  validation.cpp
src/algorithms/: common.cpp  common.hpp  ffd.cpp  guillotine.cpp  layered.cpp  maximal_space.cpp  metaheuristics.cpp  nfdh.cpp  online_ffd.cpp
tests/: adversarial_tests.cpp  cli_golden_tests.cpp  edge_case_tests.cpp  instance_io_tests.cpp  integration_tests.cpp  model_tests.cpp  packer_tests.cpp  property_tests.cpp  system_tests.cpp  test_helpers.hpp
tests/package_smoke/: CMakeLists.txt  smoke.cpp
